--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-*.class
+#IDEA Files
+.idea
+target
+*.iml
+*.ipr
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+lib
+
+### Java template
+*.class
 
 # Package Files #
 *.jar
